[front] fix errored fields not showing in red

--- a/front/src/components/system/index.module.css
+++ b/front/src/components/system/index.module.css
@@ -236,9 +236,8 @@
   color: var(--red-dark);
 }
 
-.errorLabel input,
-.errorLabel:hover input,
-.errorLabel input:focus {
+.errorLabel input.input,
+.errorLabel textarea.textarea {
   color: var(--red-dark);
   border-color: var(--red-dark);
 }
